# cmaketest2

./: .gitignore  CMakeLists.txt  README.md  cmaketest2Config.h.in  install.sh  main.cpp  run.sh
Math/: CMakeLists.txt
